--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Document</title>
+  <title>Form Document</title>
 </head>
 <body>
-  <h1>Volunteer Form</h1>
+  <h1>School Volunteer Form</h1>
   <form action="http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php" method="post">
     <fieldset>
       <legend>My Info</legend>
